# qrcode-rust

./: Cargo.toml
src/: bits.rs  canvas.rs  ec.rs  lib.rs
src/render/: image.rs  string.rs  svg.rs  unicode.rs
