[package]
name = "qrcode"
description = "QR code encoder in Rust"
license = "MIT OR Apache-2.0"
version = "0.13.0"
edition = "2021"
authors = ["kennytm <kennytm@gmail.com>"]
keywords = ["qrcode"]
repository = "https://github.com/kennytm/qrcode-rust"
readme = "README.md"
documentation = "http://docs.rs/qrcode"
exclude = [
    ".travis.yml", ".gitignore", "test-data/**", "/sgx/*"
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
image = { git = "https://github.com/mesalock-linux/image-sgx" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
image = { git = "https://github.com/mesalock-linux/image-sgx" }

[features]
default = ["svg", "enclave"]
bench = []
svg = []
enclave = ["sgx_tstd"]

[[bin]]
name = "qrencode"

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_alloc = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_backtrace = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_backtrace_sys = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_build_helper = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_cov = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_crypto_helper = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_demangle = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_libc = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_no_tstd = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_rand = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_rand_derive = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_serialize = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_serialize_derive = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_serialize_derive_internals = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tcrypto = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tcrypto_helper = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tdh = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tkey_exchange = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tprotected_fs = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_trts = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tse = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tseal = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tstd = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_tunittest = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_types = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
#sgx_ucrypto = { path = "../../../sgx_ucrypto" }
sgx_unwind = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
sgx_urts = { version = "1.1.6", git = "https://github.com/hushmesh/incubator-teaclave-sgx-sdk", tag = "v1.1.6-sgx-sdk-2.18" }
